feat: 多模态改用文件存储 — 图片持久化 + 历史回放
## 改造内容

### 后端

- AgentController: 多模态接口从 multipart 改为 JSON body（task + fileUuids）

- AgentServiceImpl: 通过 FileService 从存储加载图片 → 转 Base64 → AgentScope

- ConversationService: saveMessage 新增 fileIds 参数，消息持久化关联文件

- MessageDO: 新增 fileIds 字段

- MultimodalRequestDTO: 请求 DTO

### 前端

- 新增 file.ts API 模块（uploadFile / getFileInfo / deleteFile）

- AgentChat: 图片选择即上传到 /files/upload → 拿 fileUuid+URL

- AgentChat: 发送时传 fileUuids JSON，不再传 File[]

- AgentChat: 加载历史时解析 fileIds → 渲染图片缩略图（刷新不丢）

- vite proxy 新增 /api/v1/files → 8081

## 数据流变化

- 旧: Base64 → HTTP body → 内存 → 刷新丢失

- 新: 图片 → FileController → 存储 → fileIds 持久化 → URL 回放

## 验证

- mvn test（105 通过）+ pnpm build + pnpm test（30 通过）